--- a/frontend/student-information-system/src/index.html
+++ b/frontend/student-information-system/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-overview></app-overview>
+  <app-root></app-root>
 </body>
 </html>
